@@ -2,6 +2,8 @@
 29 Nov 2007 - 2.5.0-dev3
 ------------------------
 
+ * Added matching rules to audit log data.
+
  * Implemented SecRequestBodyNoFilesLimit.
 
  * Enhance handling of the case where we run out of disk space while
